--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,3 +1,29 @@
 body {
-    width: 400px;
+    padding: 10px;
+    width: 220px;
+}
+
+.sample {
+    padding: 10px;
+    font-weight: 700;
+}
+
+input[type="color"] {
+    margin: 10px 0;
+}
+
+.picker-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.reset-btn {
+    cursor: pointer;
+    padding: 2px 8px;
+    border-radius: 2px;
+    color: #3d3d3d;
+}
+.reset-btn:hover {
+    background-color: #efefef;
 }
